# PokeRanch

./: .gitignore  1  CMakeLists.txt  Makefile  Makefile_simple  README.md  makefile  makefile_old_for_marker  marker.out  marker_with_model.out  microsoft_webcam_calibration.yml  open_cv_test.cpp  open_cv_test.out  test.out
models/: Decidueye_walk.dae  dog.dae  litten.dae  pikachu_awaken.dae  pikachu_eat&pet.dae  pikachu_happy.dae  pikachu_rest.dae  pikachu_run.dae  pikachu_sleep.dae  pm0844_00_fi.dae  rockruff.dae  slowpoke.dae  solgaleo.dae  test.dae  untitled.dae
models/Bellossom_src/: pm0182_00_fi.dae  pm0182_00_fi.smd
models/Decidueye/: run.dae  stay.dae  turn_left.dae  turn_right.dae  walk.dae
models/Decidueye_src/: pm_0843_00_fi.dae  pm_0843_00_fi.smd
models/Incineroar/: emotion.dae
models/Incineroar_src/: pm0846_00_fi.dae  pm0846_00_fi.smd
models/Litten_src/: pm0844_00_fi.smd
models/Machamp/: run.dae  walk.dae
models/Machamp_src/: pm0068_01_fi.dae  pm0068_01_fi.smd
models/Meowth/: run.dae  stay.dae
models/Meowth_src/: pm0052_00_fi.dae  pm0052_00_fi.smd
models/Miltank/: emotion.dae  run.dae  stay.dae  walk.dae
models/Miltank_src/: pm0241_00_fi.dae  pm0241_00_fi.smd
models/Mudsdale/: emotion.dae  stay.dae  walk.dae
models/Mudsdale_src/: pm0840_01_fi.dae  pm0840_01_fi.smd
models/Pikachu/: sleep.dae  walk.dae
models/Pikachu_src/: pm0025_01_fi.smd
models/Popplio/: emotion.dae  run.dae  walk.dae
models/Popplio_src/: pm0847_00_fi.dae  pm0847_00_fi.smd
models/Probopass/: walk.dae
models/Probopass_src/: pm0476_00_fi.dae  pm0476_00_fi.smd
models/Rockruff/: emotion.dae  run.dae  stay.dae  walk.dae
models/Slowpoke/: emotion.dae
models/Slowpoke_src/: pm0079_00_fi.smd
models/Sudowoodo/: emotion.dae  run.dae  stay.dae  walk.dae
models/Sudowoodo_src/: pm0185_00_fi.dae  pm0185_00_fi.smd
models/Tauros/: emotion.dae
models/Tauros_src/: pm0128_01_fi.dae  pm0128_01_fi.smd
project/: pasha_camera_calibration.yml  pokemon_info.save
project/include/: AdditionalFunctions.h  AnimModel.h  Button.h  ButtonFunctions.h  Buttons.h  Cake.h  Game.h  GameObject.h  GameWindow.h  Interfaces.h  MarkerDetector.h  Mesh.h  Mesh_anim.h  Model.h  Model_anim.h  MovingPicture.h  Picture.h  ShaderProgram.h  States.h  Utils.h  VideoStream.h  button.h  container.h  gameObject.h  ogldev_skinned_mesh.h  pokemon_model_path.h  pokemon_name.h  renderObject.h  render_objects.h  skinned_mesh.hpp  states.h
project/shaders/: button_v_shader.txt  f_model_anim_shader.txt  v_model_anim_pokedex_shader.txt  v_shader.txt
project/src/: .main_best.cpp.swp  .marker.cpp.swp  .model_main.cpp.swo  .model_main.cpp.swp  AdditionalFunctions.cpp  AnimModel.cpp  Button.cpp  ButtonFunctions.cpp  Buttons.cpp  Cake.cpp  Game.cpp  GameObject.cpp  GameWindow.cpp  Interfaces.cpp  MarkerDetector.cpp  Mesh.cpp  Mesh_anim.cpp  Model.cpp  Model_anim.cpp  MovingPicture.cpp  Picture.cpp  ShaderProgram.cpp  States.cpp  Utils.cpp  VideoStream.cpp  VideoStream_test.cpp  button.cpp  f_shader.txt  gameObject.cpp  main.cpp  main_best.cpp  marker.cpp  model_main.cpp  model_main_anim.cpp  pokemon_model_path.cpp  pokemon_name.cpp  states.cpp  (+5 more)
(+223 files in other folders)
